--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -53,7 +53,7 @@
 					<!-- Apply any bg-* class to to the icon to color it -->
 					<span class="info-box-icon bg-green"><i class="fa fa-file-image-o"></i></span>
 					<div class="info-box-content">
-						<span class="info-box-text"><a th:href="${'/upload/person/'} + ${loginuser.person.id} + ${'/picture'}">Minhas Fotos</span> 
+						<span class="info-box-text"><a th:href="${'/upload/person/'} + ${loginuser.person.id} + ${'/picture'}">Minhas Fotos</a></span> 
 						<span class="info-box-number" th:text="${totalPictures}"></span>
 					</div>
 					<!-- /.info-box-content -->
@@ -66,7 +66,7 @@
 					<!-- Apply any bg-* class to to the icon to color it -->
 					<span class="info-box-icon bg-blue"><i class="fa fa-star-o"></i></span>
 					<div class="info-box-content">
-						<span class="info-box-text"><a th:href="${'/person/'} + ${loginuser.person.id} + ${'/post'}">Meus posts</span> 
+						<span class="info-box-text"><a th:href="${'/person/'} + ${loginuser.person.id} + ${'/post'}">Meus posts</a></span> 
 						<span class="info-box-number" th:text="${totalPosts}"></span>
 					</div>
 					<!-- /.info-box-content -->
