--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -176,7 +176,7 @@
 										<div th:each="row3 : ${row.listLikes}" class="box-footer box-comments" style="">
 											<div class="box-comment">
 												<!-- User image -->
-												<img class="img-circle img-sm" th:src="${'/upload/image/users/'+row3.person.user.id}" alt="User Image" />
+												<img class="img-circle img-sm" th:src="${s3awsurl+'users/' + row3.person.user.id + '.png'}" alt="User Image" />
 												<div class="comment-text">
 													<span class="username" th:text="${row3.person.name}"></span>
 													<span class="text-muted pull-right" th:text="${row3.date}"></span>
@@ -229,7 +229,7 @@
                   <ul class="users-list clearfix">
 		<li th:each="user : ${listUsers}">
 			<input id="id" name="id" th:value="${user.id}" type="hidden" /> 
-				<img alt="Image" th:src="${'/upload/image/users/'+user.id}" width="128" height="128" /> 
+				<img alt="Image" th:src="${s3awsurl+'users/'+row.id+'.png'}" width="128" height="128" /> 
 					<a class="users-list-name" th:href="${'/users/about/' + user.id}">
 					  <spam th:text="${user.username}"></spam>
 					</a>
