--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -229,7 +229,7 @@
                   <ul class="users-list clearfix">
 		<li th:each="user : ${listUsers}">
 			<input id="id" name="id" th:value="${user.id}" type="hidden" /> 
-				<img alt="Image" th:src="${s3awsurl+'users/'+row.id+'.png'}" width="128" height="128" /> 
+				<img alt="Image" th:src="${s3awsurl+'users/'+user.id+'.png'}" width="128" height="128" /> 
 					<a class="users-list-name" th:href="${'/users/about/' + user.id}">
 					  <spam th:text="${user.username}"></spam>
 					</a>
