--- a/src/main/resources/templates/person/listMyPosts.html
+++ b/src/main/resources/templates/person/listMyPosts.html
@@ -102,7 +102,7 @@
 	 					<div th:each="row3 : ${row.listLikes}" class="box-footer box-comments" style="">
 	 						<div class="box-comment">
 	 							<!-- User image -->
-	 							<img class="img-circle img-sm" th:src="${'/upload/image/users/'+row3.person.user.id}" alt="User Image" />
+	 							<img class="img-circle img-sm" th:src="${s3awsurl}+${'users/'}+${row3.person.user.id}+${'.png'}" alt="User Image" />
 	 							<div class="comment-text">
 	 								<span class="username" th:text="${row3.person.name}"></span>
 	 								<span class="text-muted pull-right" th:text="${row3.date}"></span>
@@ -141,7 +141,7 @@
  				<div class="box-footer" style="">
  					<div>
  					  <form enctype="application/x-www-form-urlencoded" th:object="${likes}" th:action="@{'/person/' + ${loginuser.person.id} + '/post/' + ${row.id} + '/likes'}" method="post">
- 					    <img class="img-responsive img-circle img-sm" th:src="${'/upload/image/users/'+loginuserid}" alt="Alt Text"/>
+ 					    <img class="img-responsive img-circle img-sm" th:src="${s3awsurl}+${'users/'}+${loginuserid}+${'.png'}" alt="Alt Text"/>
  					    <!-- .img-push is used to add margin to elements next to floating images -->
  					    <div class="img-push">
  					      
