--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -72,6 +72,30 @@
             <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
         </form>
     </div>
+	
+	<div class="box">
+		<div class="box-header" align="center">
+			<i class="fa fa-amazon"></i>
+				<h3 class="box-title">DC/UFC - Desenvolvimento para Nuvem</h3>
+		</div>
+				<!-- /.box-header -->
+		<div class="box-body" align="center">
+			<dl>
+		                <dt>Sobre</dt>
+		                <dd>Uma aplicação de gestão de publicação de fotos com likes e comentários utilizando os serviços da AWS.</dd>
+		                <dt>Autores</dt>
+		                <dd>Armando Soares | Juarez Filho</dd>
+		                <dt>Professores: </dt>
+		                <dd>Fernando Trinta | Paulo Rego</dd>
+	              	</dl>
+		</div>
+				<!-- /.box-body -->
+		<div class="box-footer" align="center">
+			<i class="fa fa-copyright"></i> | 2019
+			<h6>Todos os direitos reservados aos autores</h6>
+		</div>
+	</div>
+
 </div>
 
 <!-- jQuery 2.2.0 -->
