--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -21,7 +21,7 @@
 				<li><a th:href="${'/person/' + loginuserid + '/comment'}"><i class="fa fa-circle-o"></i>Comentários</a></li>
 			</ul>
 			<ul class="treeview-menu">
-				<li><a th:href="${'/upload/person/' + loginuserid + '/picture'}"><i class="fa fa-circle-o"></i>Fotos</a></li>
+				<li><a th:href="${'/upload/person/' + loginuserid + '/picture/1'}"><i class="fa fa-circle-o"></i>Fotos</a></li>
 			</ul>
 		</li>
 		
